...
            val textMeasurer = rememberTextMeasurer()

            scope.showcaseEventListener?.onEvent(TAG + "offset :$offset")
            Canvas(
                modifier = Modifier
                    .fillMaxSize()
                    .semantics { testTag = "canvas" }
                    .pointerInput(isShowcasing) {
                        detectTapGestures {
                            /** detect taps on the screen */
                            coroutineScope.launch {

                                /** hide current arrow */
...
